<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.henrymeza.registrocontacto.MainActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_txtNombreCompleto"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_txtFechaNacimiento"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_btnFecha"
        android:onClick="showDatePickerDialog" />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_txtTelefono"

        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_txtEmail"
        />
    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mensaje_txtDescripcion"
        />
    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_btnGrabar"
        android:onClick="btnSiguiente_Click"
        />
</LinearLayout>
