<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.henrymeza.registrocontacto.VerContacto">
    <TextView
        android:id="@+id/tvTituloConfirmarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutilo_confirmarDatos"
        android:textStyle="bold"
        android:textSize="@dimen/size_LetraTituloConfirmarDatos"
        android:layout_gravity="center"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:id="@+id/tvTituloNombreCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_txtNombreCompleto"
        android:textStyle="bold"
        />

        <TextView
            android:id="@+id/tvNombreCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/tvTituloFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_txtFechaNacimiento"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTituloTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_txtTelefono"
            android:textStyle="bold"
            />
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTituloEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_txtEmail"
            android:textStyle="bold"
            />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tvTituloDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensaje_txtDescripcion"
            android:textStyle="bold"
            />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    <Button
        android:id="@+id/btnGrabar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_btnEditar"
        android:onClick="btnEditar_Click"
        />

</LinearLayout>
